--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,88 +1,19 @@
 ---
-shortTitle: OxyGEN: 2 Emergency Ventilators
+# Comments are expressed with a # preceding the line of text
+# Be as explicit and contextual as possible
+title: OxyGEN Ventilators
+
+# Name of the actual github repository and organization/repository
 name: OxyGEN-Ventilators
 nameWithOwner: CombatCovid/OxyGEN-Ventilators
 
+# Description is shown in English for now to get a Minimum Viable Product
+# We are working from the start to facilitate different languages
 languages:
+  # Document in English
   EN:
     description: One simple design for makers, and one for industrial production.
-    keywords: [ covid-19, medical equipment, emergency, critical care ,intensive care, icu, maker, industrial, prototype
-               small scale, large scale, emergency room, emt, treatment, hospital, operating room,]
-    longDescription: >
-    OxyGEN is an open hardware emergency ventilator. It is designed by design and medical proffesionals
-    in Barcelona led by the company Protofy.xyz for the COVID-19 health crisis. There are two versions. The
-    OxyGEN-M is designed for makers and can be built using common tools and no special machinery or materials
-    are needed. The OxyGEN-IP is the version for industrial scale production. Foldforming metalworking
-    machinery and engineering knowledge is needed to build it.
+		keywords: [ covid-19, medical equipment, emergency, critical care ,intensive care, icu, maker, industrial, prototype, small scale, large scale, emergency room, emt, treatment, hospital, operating room,]
 
-project-link: https://www.oxygen.protofy.xyz/
-repository-link: https://github.com/ProtofyTeam/OxyGEN
-intended-use: >-
-  tbd
-made: true
-made-independently: false
-license: unspecified
-date-updated: 2020-03
-manifest-author:
-  name: protofy.xyz
-  affiliation: Barcelona based company : "protofy.xyz"
-contributors:
-   -Protofy.xyz
-   -Hospital Clínic de Barcelona
-   -Hospital Germans Trias i Pujol
-   -Universitat de Barcelona
-sub-parts :
-   -1 Inox Sheet 1 mm
-   -1 Inox Sheet 3 mm
-   -1 Inox Sheet 5 mm
-	-1 Methacrylate Sheet 5 mm x 485,5 mm x 160 mm
-	-1 Nylon/Delrin/PVC Sheet 10 mm x 50 mm x 42 mm
-	-1 Inox Bar Ø12 mm x 158 mm
-	-1 Inox Bar Ø16 mm x 170 mm
-	-1 Inox Bar Ø50 mm x 20 mm
-	-1 Nylon/Delrin Bar Ø10,5 mm x 51 mm
-	-3 Nylon/Delrin Bar Ø12 mm x 43,5 mm
-	-1 Nylon/Delrin Bar Ø22 mm x 105 mm
-	-1 Nylon/Delrin Bar Ø50 mm x 52 mm
-	-1 Nylon/Delrin Batten 42 mm x 33 mm x 105 mm
-	-1 Nylon/Delrin Batten 70 mm x 24,8 mm x 305 mm
-	-2 Metal Pin Ø6 mm x 23 mm
-	-1 Manometer
-	-4 Bearing Ø37 mm x 12 mm
-	-1 Motor 12V 48W 6Nm 30RPM REF.11194592000E
-	-1 PC Power Supply ATX 500W
-	-1 Dimmer LED 12/24V 8A
-	-2 Micro Switch
-	-1 Operating Light 230V AC 5W
-	-1 Plug Ø40 mm
-	-1 Diode Imax ≥ 150 A, Pd(25ºC) ≥ 5 W
-	-1 Power Connector IEC C14 with Switch and Fuse
-	-1 Power Cable IEC C13 to Faston
-	-1 Cable AWG 16 Approx. 1 m
-	-6 Nut M3
-	-7 Nut M5
-	-5 Rivet Nut M5
-	-2 Tapex M10
-	-2 Screw DIN 912 M3 x 15 mm
-	-4 Screw DIN 912 M3 x 16 mm
-	-1 Screw DIN 912 M5 x 40 mm
-	-3 Screw DIN 912 M6 x 50 mm
-	-4 Screw M6 x 24 mm
-	-2 Screw M10 x 20 mm
-	-6 Self Tapping Screw M4 x 10 mm
-	-12 Self Tapping Screw M5 x 12 mm
-	-8 Self Tapping Screw M5 x 20 mm
-	-47 Rivet Ø4,8 mm
-	-1 Eyebolt Thread Ø4 mm x 18 mm, hitch ØIn 8 mm
-	-2 Hinge 60 mm x 50 mm
-	-1 Spring ØIn 9 mm x 90 mm
-	-1 Spring ØIn 12mm x 31 mm
-	-1 O-ring ØEx 30 mm, ØIn 22 mm
-	-10 Rubber hole spacer Ø15,5, separation 6 mm
-	-1 Nylon Spacer ØEx 20 mm, ØIn 13 mm, 29 mm
-	-1 Nylon Spacer ØEx 20 mm, ØIn 13 mm, 35 mm
-	-1 Foam 6 mm x 171 mm x 45 mm
-	-2 Protective rubber length Approx. 460 mm
-	-2 Protective rubber thickness 2.5 mm length Approx. 1125 mm
-	-1 Motor coupling from Ø12 mm to Ø10 mm, length 35 mm
-	-1 Bronze Bearing Ø16 mm x 70 mm   
+# end of app metadata
+
